--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,7 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:backgroundTint="@color/orangeAppColor"
-        android:text="@string/register"
+        android:text="@string/login"
         android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
         app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
@@ -115,6 +115,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:clickable="true"
+        android:onClick="onClick"
         android:text="@string/first_time"
         android:textColor="@color/red"
         android:textSize="12sp"
