--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,12 +89,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/gray"
+        android:textColorHint="@color/gray"
         android:ems="10"
         android:hint="@string/password_hint"
         android:inputType="textPassword"
         android:textColor="@color/black"
-        android:textColorHint="@color/gray"
-        app:layout_constraintEnd_toStartOf="@+id/gl_login_left_icons"
+        app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
         app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
         app:layout_constraintTop_toBottomOf="@+id/et_login_emailaddress" />
 
@@ -102,7 +102,7 @@
         android:id="@+id/btn_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/rounded_button_orange"
         android:backgroundTint="@color/orangeAppColor"
         android:text="@string/login"
@@ -162,5 +162,17 @@
         app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
         app:layout_constraintStart_toStartOf="@+id/gl_login_left_icons"
         app:srcCompat="@drawable/ic_password" />
+
+    <ProgressBar
+        android:id="@+id/pb_login"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:translationZ="10dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
