--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,12 +89,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/gray"
-        android:textColorHint="@color/gray"
         android:ems="10"
         android:hint="@string/password_hint"
         android:inputType="textPassword"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toStartOf="@+id/gl_login_right_of_image"
+        android:textColorHint="@color/gray"
+        app:layout_constraintEnd_toStartOf="@+id/gl_login_left_icons"
         app:layout_constraintStart_toStartOf="@+id/gl_login_left_of_email"
         app:layout_constraintTop_toBottomOf="@+id/et_login_emailaddress" />
 
