--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:backgroundTint="#FFFFFF"
-    tools:context=".Activities.ProfilePageActivity">
+    tools:context=".Activities.MatchesProfilePageActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_logoarea"
         android:layout_width="0dp"
